# myo-emg

./: .gitignore  LICENSE  classify_myo.py  common.py  main.py  myo.py  myo_emg_preprocessor.py  myo_emg_recorder.py  myo_raw.py  pyproject.toml
