[tool.poetry]
name = "myo-emg"
version = "0.1.0"
description = "EMG processing with myo armband"
authors = ["bold <bold@cryptoguru.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
scipy = "^1.3"
numpy = "^1.16"
fire = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
